--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,6 +16,11 @@ jobs:
       - name: Fetch the sources
         uses: actions/checkout@v2
 
+      - name: Set up .NET SDK
+        uses: actions/setup-dotnet@v1
+        with:
+          dotnet-version: '6.0.x'
+
       - name: Install the dependencies
         shell: pwsh
         run: ./scripts/install.ps1
