--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,6 +12,8 @@ on:
 jobs:
   main:
     runs-on: windows-latest
+    env:
+      NUGET_PACKAGES: ${{ github.workspace }}/.github/nuget-packages
     steps:
       - name: Fetch the sources
         uses: actions/checkout@v2
@@ -21,10 +23,11 @@ jobs:
         with:
           dotnet-version: '6.0.x'
 
-      - name: Install the dependencies
-        shell: pwsh
-        run: ./scripts/install.ps1
+      - name: Cache NuGet packages
+        uses: actions/cache@v2
+        with:
+          path: ${{ env.NUGET_PACKAGES }}
+          key: ${{ runner.os }}.nuget.${{ hashFiles('**/*.pasproj') }}
 
       - name: Build
-        shell: pwsh
-        run: ./scripts/build.ps1
+        run: dotnet build
